--- a/rockpaperscissors/index.html
+++ b/rockpaperscissors/index.html
@@ -24,6 +24,13 @@
   </div>
 </div>
   </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12" text center>
+        
+      </div>
+    </div>
+  </div>
   
 
   <script src="app.js"></script>
